# BIDA2-ProjetIntegration-API

./: .env.example  .gitignore  README.md  pyproject.toml
core/: asgi.py  backends.py  settings.py  urls.py  views.py  wsgi.py
core/accounts/: permissions.py
core/settings/: base.py  local.py  production.py
courts/: models.py  serializers.py  tests.py  views.py
docker/: Dockerfile
docs/: endpoints.md  google_auth.md
members/: models.py  serializers.py  tests.py  views.py
members/migrations/: 0001_initial.py  0002_rename_userprofile_memberprofile.py  0003_memberprofile_user.py  0004_memberprofile_affiliation_number_and_more.py
src/contributions/: models.py  views.py
src/contributions/migrations/: 0001_initial.py
src/core/: asgi.py  backends.py  urls.py  views.py  wsgi.py
src/core/accounts/: permissions.py
src/core/settings/: base.py
src/courts/: apps.py  models.py  serializers.py  tests.py  views.py
src/courts/migrations/: 0001_initial.py  0002_initial.py
src/members/: apps.py  models.py  serializers.py  tests.py  views.py
src/members/migrations/: 0001_initial.py  0002_rename_userprofile_memberprofile.py  0003_memberprofile_user.py  0004_memberprofile_affiliation_number_and_more.py
src/system/: __init__.py  apps.py  views.py
